--- a/mayan/apps/documents/templates/documents/forms/widgets/document_page_image.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/document_page_image.html
@@ -7,9 +7,11 @@
     >
         {% get_icon 'documents.icons.icon_document_image_loading'  %}
     </span>
+    {# Used with the default filter to typecast Python's None to the data attribute's empty string  #}
+    {% get_api_image_url instance width=image_width height=image_height zoom=image_zoom rotation=image_rotation as image_url %}
     <img
         class="thin_border {{ image_classes }}"
-        data-url="{% get_api_image_url instance width=image_width height=image_height zoom=image_zoom rotation=image_rotation %}"
+        data-url="{{ image_url|default:'' }}"
         src="#"
         style="{% if image_max_height %}max-height: {{ image_max_height }}; {% endif %}"
      />
