--- a/mayan/apps/appearance/templates/appearance/forms/widgets/textareadiv.html
+++ b/mayan/apps/appearance/templates/appearance/forms/widgets/textareadiv.html
@@ -1,2 +1,2 @@
 <pre name="{{ widget.name }}" {% include "django/forms/widgets/attrs.html" %}>
-{% if widget.value %}{{ widget.value }}{% endif %}</pre>
+{% block widget_value %}{% if widget.value %}{{ widget.value }}{% endif %}{% endblock %}</pre>
