--- a/mayan/apps/appearance/templates/appearance/generic_multiform_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_multiform_subtemplate.html
@@ -2,9 +2,9 @@
 {% load static %}
     <div class="well">
         {% if is_multipart %}
-            <form action="{{ form_action }}" class="{{ form_class|default:'' }}" enctype="multipart/form-data" id="{{ form_id|default:'' }}" method="{{ submit_method|default:'post' }}">
+            <form action="{{ form_action }}" class="{{ form_css_classes|default:'' }}" enctype="multipart/form-data" id="{{ form_id|default:'' }}" method="{{ submit_method|default:'post' }}">
         {% else %}
-            <form action="{{ form_action }}" class="{{ form_class|default:'' }}" id="{{ form_id|default:'' }}" method="{{ submit_method|default:'post' }}">
+            <form action="{{ form_action }}" class="{{ form_css_classes|default:'' }}" id="{{ form_id|default:'' }}" method="{{ submit_method|default:'post' }}">
         {% endif %}
 
         {% for form_name, form in forms.items %}
@@ -56,10 +56,10 @@
 
             <div class="form-group">
                 {% if not form_disable_submit %}
-                    <button class="btn btn-primary" name="{% if form.prefix %}{{ form.prefix }}-submit{% else %}submit{% endif %}" type="submit"><i class="{{ submit_icon|default:'fa fa-check' }}"></i> {% if submit_label %}{{ submit_label }}{% else %}{% if object %}{% trans 'Save' %}{% else %}{% trans 'Submit' %}{% endif %}{% endif %}</button>
+                    <button class="btn btn-primary btn-hotkey-default" name="{% if form.prefix %}{{ form.prefix }}-submit{% else %}submit{% endif %}" type="submit"><i class="{{ submit_icon|default:'fa fa-check' }}"></i> {% if submit_label %}{{ submit_label }}{% else %}{% if object %}{% trans 'Save' %}{% else %}{% trans 'Submit' %}{% endif %}{% endif %}</button>
                 {% endif %}
                 {% if previous %}
-                      &nbsp;<a class="btn btn-default" onclick='history.back();'>
+                      &nbsp;<a class="btn btn-default btn-hotkey-cancel" onclick='history.back();'>
                         <i class="fa fa-cross"></i> {% if cancel_label %}{{ cancel_label }}{% else %}{% trans 'Cancel' %}{% endif %}
                       </a>
                 {% endif %}
