--- a/mayan/apps/document_states/templates/document_states/forms/widgets/workflow_image.html
+++ b/mayan/apps/document_states/templates/document_states/forms/widgets/workflow_image.html
@@ -1,1 +1,1 @@
-<img class="img-responsive" name="{{ widget.name }}" {% include "django/forms/widgets/attrs.html" %} src="{% url 'rest_api:workflow-image' widget.value.pk %}" style="margin:auto;" />
+<img class="img-responsive" name="{{ widget.name }}" {% include "django/forms/widgets/attrs.html" %} src="{{ widget.value.get_api_image_url }}" style="margin:auto;" />
