Navigation: Add list facet menu
Add the new list facet navigation menu. Used to provide facets
to the list subtemplate. The list facet allows separating the object
action links from the object navigation links. The list facet
links are displayed before the list object links on the list
subtemplate. In the object views, the list facet menu behaves
exactly the same as the form facet menu.

Signed-off-by: Roberto Rosario <roberto.rosario.gonzalez@gmail.com>

--- a/mayan/apps/appearance/templates/appearance/base.html
+++ b/mayan/apps/appearance/templates/appearance/base.html
@@ -38,7 +38,7 @@
         </div>
 
         {% get_menus_links names='object menu,sidebar menu,secondary menu' sort_results=True as links %}
-        {% get_menu_links 'object facet' sort_results=True as form_navigation_links %}
+        {% get_menus_links names='object facet,object list facet' sort_results=True as form_navigation_links %}
 
         <div class="row">
             {% if links or form_navigation_links %}
