--- a/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
@@ -96,6 +96,14 @@
                             {% endfor %}
                             {% if not hide_links %}
                                 <td class="last">
+                                    {% get_menu_links 'object list facet' sort_results=True source=object as resolved_links %}
+                                    {% for object_navigation_links in resolved_links %}
+                                        {% with 'true' as horizontal %}
+                                        {% with 'true' as hide_icon %}
+                                            {% include 'navigation/generic_navigation.html' %}
+                                        {% endwith %}
+                                        {% endwith %}
+                                    {% endfor %}
                                     {% get_menu_links 'object menu' source=object as resolved_links %}
                                     {% for object_navigation_links in resolved_links %}
                                         {% with 'true' as horizontal %}
