--- a/mayan/apps/appearance/templates/appearance/generic_list_horizontal.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_horizontal.html
@@ -14,7 +14,7 @@
                 {% for object_navigation_links in resolved_links %}
                     {% include 'navigation/generic_navigation.html' %}
                 {% empty %}
-                    <p class="text-center" colspan=99>
+                    <p class="text-center">
                         {% include 'appearance/no_results.html' %}
                     </p>
                 {% endfor %}
