List template: Add missing closing tag
Signed-off-by: Roberto Rosario <roberto.rosario.gonzalez@gmail.com>

--- a/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
@@ -119,6 +119,7 @@
                                     </td>
                                 {% endif %}
                                 </tr>
+                            {% endfor %}
                         </tbody>
                     </table>
                 </div>
