--- a/mayan/apps/appearance/templates/appearance/home.html
+++ b/mayan/apps/appearance/templates/appearance/home.html
@@ -44,7 +44,7 @@
     <div class="well center-block">
         <div class="row">
             <div class="col-xs-12">
-                <form action="{% url 'search:results' search_model='documents.DocumentPageResult' %}" method="get" role="search">
+                <form action="{% url 'search:results' search_model='documents.DocumentPageSearchResult' %}" method="get" role="search">
                     <div class="input-group">
                         <input class="form-control" name="q" placeholder="{% trans 'Search pages' %}" type="text" value="{{ search_terms|default:'' }}">
                         <span class="input-group-btn">
