Add new sidebar main menu
Add a left side menu navigation style. The main app navigation links
will be displayed here. The notification, user and system tools are now
displayed at the top navigation bar.

Signed-off-by: Roberto Rosario <Roberto.Rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/menu_main.html
+++ b/mayan/apps/appearance/templates/appearance/menu_main.html
@@ -15,8 +15,8 @@
             <a class="navbar-brand" href="{% url home_view %}">{% smart_setting 'COMMON_PROJECT_TITLE' %}</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                {% get_menu_links 'main menu' as menu_links %}
+            <ul class="nav navbar-nav navbar-right">
+                {% get_menu_links 'menu topbar' as menu_links %}
                 {% for link_set in menu_links %}
                     {% for link in link_set %}
                         {% with 'true' as as_li %}
