--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -33,13 +33,18 @@
         {% if appearance_type == 'plain' %}
             {% block content_plain %}{% endblock %}
         {% else %}
-            <div id="main-menu">
-                {% include 'appearance/main_menu.html' %}
+            <div id="menu-main">
+                {% include 'appearance/menu_main.html' %}
             </div>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div id="ajax-content"></div>
+                <div class="sidebar" id="menu-sidebar">
+                    {% include 'appearance/menu_sidebar.html' %}
+                </div>
+                <div class="main">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div id="ajax-content"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -102,11 +107,26 @@
             {# Transfer variable from Django to javascript #}
             var initialURL = '{% url home_view %}';
             var djangoDEBUG = {% if debug %}true{% else %}false{% endif %};
-            var apiTemplateMainMenuURL = '{% url "rest_api:template-detail" "main_menu" %}';
+            var apiTemplateMainMenuURL = '{% url "rest_api:template-detail" "menu_main" %}';
         </script>
         <script src="{% static 'appearance/js/base.js' %}" type="text/javascript"></script>
         <script>
-            var app = new MayanApp();
+            var app = new MayanApp({
+                ajaxMenusOptions: [
+                    {
+                        interval: 5000,
+                        menuSelector: '#menu-sidebar',
+                        name: 'menu_main',
+                        url: '{% url "rest_api:template-detail" "menu_sidebar" %}'
+                    },
+                    {
+                        interval: 5000,
+                        menuSelector: '#menu-main',
+                        name: 'menu_sidebar',
+                        url: '{% url "rest_api:template-detail" "menu_main" %}'
+                    },
+                ]
+            });
 
             var afterBaseLoad = function () {
                 MayanImage.intialize({
