Highlight selected panels
Add event handler and style sheet to highlight panels when selected.

Signed-off-by: Roberto Rosario <Roberto.Rosario@mayan-edms.com>

--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -478,3 +478,8 @@ body {
 .navbar-brand {
     outline: none;
 }
+
+.panel-highlighted {
+    border: 2px solid #18bc9c;
+    box-shadow: 10px 10px 20px #000000;
+}
