Add widget support to SourceColumn
Allow passing a widget class to SourceColumn. This makes
using lambdas to render model column unnecesary and are
mostly removed too.

Signed-off-by: Roberto Rosario <Roberto.Rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/generic_list_items_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_items_subtemplate.html
@@ -76,7 +76,7 @@
                                                             {{ object }}
                                                         {% endif %}
                                                     {% else %}
-                                                        {% source_column_resolve column=object|get_source_columns:"only_identifier" %}
+                                                        {% source_column_resolve column=object|get_source_columns:"only_identifier" as column_value %}{{ column_value }}
                                                     {% endif %}
                                                 </span>
                                             </label>
