--- a/mayan/apps/appearance/templates/appearance/list_toolbar.html
+++ b/mayan/apps/appearance/templates/appearance/list_toolbar.html
@@ -1,15 +1,17 @@
 {% load i18n %}
 
+{% load common_tags %}
+
 <div class="pull-left">
     <div class="btn-toolbar" role="toolbar">
-            <div class="btn-group">
-        {% if multi_item_actions %}
+        <div class="btn-group">
+            {% if multi_item_actions %}
                 <a class="btn btn-default btn-sm check-all" data-checked=false data-icon-checked="fa fa-check-square" data-icon-unchecked="far fa-square" title="{% trans 'Select/Deselect all' %}">
                     <i class="far fa-square"></i>
                 </a>
-        {% endif %}
-            <a class="btn btn-default btn-sm" href="?_list_mode={% if list_as_items %}list{% else %}items{% endif %}" title="{% trans 'Toggle list display mode' %}">
-                <i class="fa {% if list_as_items %}fa-list{% else %}fa-th-large{% endif %}"></i>
+            {% endif %}
+            <a class="btn btn-default btn-sm" href="{% get_list_mode_querystring %}" title="{% trans 'Toggle list display mode' %}">
+                {% get_list_mode_icon as list_mode_icon %}{{ list_mode_icon.render }}
             </a>
         </div>
     </div>
