--- a/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
@@ -108,7 +108,7 @@
                                         {% if column_value %}
                                             <td>
                                                 {% if source_column.is_absolute_url %}
-                                                    <a href="{{ column_value.get_absolute_url }}">{{ column_value }}</a>
+                                                    <a href="{{ column_value.get_absolute_url|default:object.get_absolute_url }}">{{ column_value }}</a>
                                                 {% else %}
                                                     {{ column_value }}
                                                 {% endif %}
