Control the height of thumbnails in table view
Since tables row height can't be controlled using CSS (they
will always resize to the size of their elements), this commit
adds a table cell container whose size can be controlled from
the view. This way big thumbnail images won't break the appearance
of the table.

Signed-off-by: Roberto Rosario <Roberto.Rosario@mayan-edms.com>

--- a/mayan/apps/documents/templates/documents/widgets/document_thumbnail.html
+++ b/mayan/apps/documents/templates/documents/widgets/document_thumbnail.html
@@ -12,10 +12,12 @@
     {% if gallery_name %}data-fancybox="{{ gallery_name }}"{% endif %}
 >
     {% with 'lazy-load thin_border-thumbnail' as image_classes %}
-    {% with '200px' as image_max_height %}
+    {% with '200px' as image_style_max_height %}
+    {% with '100%' as image_style_height %}
     {% with size_thumbnail_width as image_width %}
     {% with size_thumbnail_height as image_height %}
         {% include 'documents/forms/widgets/document_page_image.html' %}
+    {% endwith %}
     {% endwith %}
     {% endwith %}
     {% endwith %}
