--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -483,3 +483,7 @@ body {
     border: 2px solid #18bc9c;
     box-shadow: 10px 10px 20px #000000;
 }
+
+.td-container-thumbnail {
+    height: 100px;
+}
