--- a/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
@@ -118,7 +118,12 @@
                                  {% if not hide_columns %}
                                     {% get_source_columns source=object exclude_identifier=True as source_columns %}
                                     {% for column in source_columns %}
-                                        <td>{% source_column_resolve column=column as column_value %}{{ column_value }}</td>{# Use explicit 'as column_value ' to force date rendering #}
+                                        <td>
+                                            <div class="{{ table_cell_container_classes }}">
+                                                {% source_column_resolve column=column as column_value %}{{ column_value }}
+                                                {# Use explicit 'as column_value ' to force date rendering #}
+                                            </div>
+                                        </td>
                                     {% endfor %}
                                 {% endif %}
                                 {% for column in extra_columns %}
