--- a/mayan/apps/documents/templates/documents/forms/widgets/document_page_image.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/document_page_image.html
@@ -13,7 +13,7 @@
         class="thin_border {{ image_classes }}"
         data-url="{{ image_url|default:'' }}"
         src="#"
-        style="{% if image_max_height %}max-height: {{ image_max_height }}; {% endif %}"
+        style="{% if image_style_height %}height: {{ image_style_height }};{% endif %} {% if image_style_max_height %}max-height: {{ image_style_max_height }};{% endif %}"
      />
 </span>
 
