--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -113,6 +113,7 @@
             var app = new MayanApp({
                 ajaxMenusOptions: [
                     {
+                        callback: MayanApp.setupNavbarState,
                         interval: 5000,
                         menuSelector: '#menu-sidebar',
                         name: 'menu_main',
