--- a/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
@@ -131,7 +131,7 @@
                                 {% endfor %}
                                 {% if not hide_links %}
                                     <td class="last">
-                                        {% get_menu_links 'object list facet' sort_results=True source=object as resolved_links %}
+                                        {% get_menu_links name='list facet' sort_results=True source=object as resolved_links %}
                                         {% for object_navigation_links in resolved_links %}
                                             {% with 'true' as horizontal %}
                                             {% with 'true' as hide_icon %}
@@ -139,7 +139,7 @@
                                             {% endwith %}
                                             {% endwith %}
                                         {% endfor %}
-                                        {% get_menu_links 'object menu' source=object as resolved_links %}
+                                        {% get_menu_links name='object' source=object as resolved_links %}
                                         {% for object_navigation_links in resolved_links %}
                                             {% with 'true' as horizontal %}
                                             {% with 'true' as hide_icon %}
