Add spaceless tags
Add spaceless tags to the invalid document template.

Signed-off-by: Roberto Rosario <Roberto.Rosario@mayan-edms.com>

--- a/mayan/apps/documents/templates/documents/invalid_document.html
+++ b/mayan/apps/documents/templates/documents/invalid_document.html
@@ -1,3 +1,4 @@
+{% spaceless %}
 <div class="text-center" style="border: height: 100%;">
     <div class="fa-4x">
         <span class="fa-layers fa-fw">
@@ -6,3 +7,4 @@
         </span>
     </div>
 </div>
+{% endspaceless %}
